--- a/src/locales/ko.json
+++ b/src/locales/ko.json
@@ -25,7 +25,7 @@
     "edit": "수정",
     "learn_more": "더 알아보기",
     "maybe_later": "나중에",
-    "more": "더 많은",
+    "more": "더 보기",
     "next": "다음",
     "no_thanks": "아니오 괜찮습니다.",
     "off": "꺼짐",
@@ -46,23 +46,37 @@
     "daily_new_cases": "신규 확진자",
     "error_getting_data": "죄송합니다. {{location}} 대한 신규 확진자 데이터를 가져올 수 없습니다.",
     "infection_rate": "감염률",
-    "new_cases": "신규 확진자",
-    "per_100k": "10만 당",
+    "overall_risk_level_in": "{{locationName}}에 전반적인 위험 수준",
+    "past_days": "지난 {{days}}일 동안 일간 신규 확진자",
     "positive_test_rate": "양성 결과 비율",
     "see_more": "더 보기",
-    "source": "출처: {{source}}",
-    "trending_down": "하락세",
-    "trending_up": "추세 분석"
+    "source": "출처: {{source}}"
   },
   "errors": {
     "description": "오류가 발생했습니다. 앱을 새로 고침하세요.",
     "reload": "새로 고침",
-    "title": "알 수 없는 오류"
+    "something_went_wrong": "문제가 발생했습니다.",
+    "title": "알 수 없는 오류",
+    "try_again_later": "나중에 다시 시도하십시오"
   },
   "escrow_verification": {
-    "person_and_health_expert": "의료 전문가와 이야기하는 사람"
+    "error": {
+      "invalid_phone_number": "전화 번호는 10자리여야 합니다."
+    },
+    "person_and_health_expert": "의료 전문가와 이야기하는 사람",
+    "start": {
+      "body": "코로나19 양성 결과를 받은 경우에 (항체 검사 제외) 익명으로 신고 할 수 있습니다. \n\n검사 결과를 신고해 주시면 커뮤니티 안에 다른 사람들이 바이러스의 확산을 막는 일에 도움이 됩니다.",
+      "header": "양성 결과를 신고하기",
+      "what_is_a_verification_code": "인증 번호는 무엇인가요?"
+    },
+    "user_details_form": {
+      "phone_number": "전화 번호",
+      "test_date": "검사 날짜",
+      "test_details": "검사 세부 정보"
+    }
   },
   "export": {
+    "code": "코드",
     "code_input_body_bluetooth": "인증 코드를 입력하십시오.",
     "code_input_button_cancel": "취소",
     "code_input_title_bluetooth": "진단을 확인하십시오.",
@@ -75,6 +89,7 @@
     "enable_exposure_notifications_body": "확진 결과를 보고하려면 노출 알림을 활성화해야 합니다.",
     "enable_exposure_notifications_button": "노출 알림 활성화",
     "enable_exposure_notifications_title": "계속하려면 노출 알림 설정",
+    "enter_verification_code": "인증 번호를 입력하십시오.",
     "error": {
       "invalid_code": "다른 코드로 시도하십시오.",
       "invalid_format": "잘못된 형식",
@@ -82,6 +97,13 @@
       "unknown_code_verification_error": "다른 코드로 시도하십시오.",
       "verification_code_used": "인증 코드가 이미 사용되었습니다."
     },
+    "intro": {
+      "body1": "코로나19 검사 양성 괄과에 대해 {{healthAuthorityName}}한테서 인증 번호를 받은 경우에 다음 화면에서 인증 번호를 제출할 수 있습니다.",
+      "body2": "인증 번호가 없지만 양성 결과를 받은 경우에 {{healthAuthorityName}}한테서 인증 번호를 받고 나서 계속할 수 있습니다.",
+      "header": "인증 번호를 갖고 계십니까?",
+      "what_is_a": "인증 번호는 무엇입니까?"
+    },
+    "never_mind_button_title": "동의하지 않습니다 (취소)",
     "person_and_health_expert": "의료 전문가와 이야기하는 사람",
     "publish_consent_title_bluetooth": "지역사회의 다른 사람에게 알리기",
     "publish_keys": {
@@ -99,30 +121,29 @@
       }
     },
     "symptom_onset": {
+      "did_you_have_symptoms": "증상이 있었습니까?",
       "no_i_didnt_have": "아니오, 증상이 없었습니다",
-      "select_date": "날짜 선택",
       "symptoms": "증상",
+      "when_did_your_symptoms": "증상이 언제 시작 되었습니까?",
       "yes_i_did_have": "네, 증상이 있었습니다"
+    },
+    "verification_code_info": {
+      "how_do_i_get_body": "보건 당국인 {{healthAuthorityName}} 문의하십시오.",
+      "how_do_i_get_header": "인증 번호는 어떻게 받나요?",
+      "info_header": "인증 번호는 무엇입니까?",
+      "what_happens_header": "코드를 제출하면 어떻게 되나요?"
     }
   },
   "exposure_history": {
     "check_for_exposures": "최신 정보",
     "days_remaining": "권장 격리 기간이 {{daysOfQuarantineLeft}}일 남았습니다.",
     "exposure_detail": {
-      "2m_apart": "2미터 간격",
-      "6ft_apart": "6피트 간격",
-      "general_guidance": "일반 지침",
-      "ha_guidance_header": "본인은 어떻게 해야합니까?",
-      "header": "코로나19 확진자와 동선이 겹쳤을 수 있습니다.",
       "next_steps": "다음 단계",
       "personalize_my_guidance": "지침을 개인화하기",
-      "quarantine": "격리하려면",
-      "schedule_callback": "{{healthAuthorityName}} 에서 이동경로 조사 담당자의 지원을 받으려면 전화를 예약하십시오.",
-      "speak_with_contact_tracer": "이동경로 조사 담당자와 대화하기",
-      "wash_your_hands": "손을 씻으십시오.",
-      "wear_a_mask": "마스크 착용"
+      "schedule_callback": "{{healthAuthorityName}} 에서 이동경로 조사 담당자의 지원을 받으려면 전화를 예약하십시오."
     },
     "exposure_report": "노출 보고서",
+    "exposure_summary": "{{startDate}}에서 {{endDate}} 사이에 근처에 있었던 사람들 중 에 하나가 코로나19 확진 판정을 받았습니다.",
     "health_guidelines": {
       "six_feet_apart": "6 피트 간격 유지",
       "stay_home": "아프면 집에 머무르십시오.",
@@ -139,17 +160,25 @@
     "no_connectivity_message": "인터넷에 연결되어 있지 않습니다!",
     "no_exposure_reports": "노출 보고서 없음",
     "no_exposure_reports_over_past": "지난 14일 동안 노출 보고서를 받지 못했습니다.",
-    "possible_exposure": "코로나19 노출 가능성",
-    "protect_yourself_and_others": "귀하와 지역 사회를 보호하십시오.",
-    "review_guidance_from_ha": "{{healthAuthorityName}}에서 지침을 검토하십시오.",
+    "possible_exposures": "코로나19 노출 가능성",
     "review_health_guidance": "보건 지침 검토",
     "updated": "업데이트",
     "why_did_i_get_an_en": "노출 알림을 받는 이유는 무엇입니까?",
     "why_did_i_get_an_en_para": "귀하의 주변에 코로나19 감염 확진자가 발생했을 경우, 해당 확진자가 다른사람에게 알리기를 선택하면 노출 알림을 받게 됩니다."
   },
   "exposure_notification_alerts": {
+    "bluetooth_body": "노출 알림을 활성화하려면 설정 앱에서 블루투스를 켜야 합니다.",
+    "bluetooth_title": "블루투스 활성화",
+    "cant_check_for_exposures_body": "노출 여부를 확인하려면 노출 알림을 활성화해야 합니다.",
     "cant_check_for_exposures_button": "노출 알림 활성화",
+    "cant_check_for_exposures_title": "노출 여부를 확인할 수 없음",
+    "location_title": "위치 서비스 활성화",
+    "set_active_region_ios_body": "설정 앱을 열고 이 앱의 노출 알림 설정으로 이동 한 다음 '활성화된 지역으로 설정'을 누릅니다.",
+    "set_active_region_ios_title": "활성 지역 설정",
+    "share_exposure_information_ios_body": "설정 앱을 연 다음 이 앱의 노출 알림 설정으로 이동합니다. '노출 정보 공유'가 켜져 있는지 확인한 다음 '활성화된 지역으로 설정'을 누릅니다.",
     "share_exposure_information_ios_title": "노출 정보 공유",
+    "unhandled_error_title": "오류가 발생했습니다",
+    "use_exposure_notifications_android_body": "노출 알림을 활성화하려면 설정 앱의 코로나19 노출 알림 화면으로 이동하여 '노출 알림 사용'을 선택하십시오.",
     "use_exposure_notifications_android_title": "노출 알림 활성화"
   },
   "exposure_scanning_status": {
@@ -171,28 +200,38 @@
       "share_message": "본 앱 {{applicationName}}을 확인하세요, 코로나19 확산을 방지하는데 도움이 될 수 있습니다! {{appDownloadLink}}",
       "tracing_off_header": "비활성",
       "tracing_off_subheader": "블루투스 및 근접 추적을 활성화하여 노출에 대한 정보를 얻을 수 있습니다.",
-      "tracing_on_header": "활성"
+      "tracing_on_header": "노출 알림 켬"
     },
     "call_emergency_services": "응급 서비스 호출",
     "check_if_your_symptoms": "증상을 입력하고 건강을 유지하는 방법에 대한 권장 상황을 확인하십시오.",
     "enter_symptoms": "증상 입력",
+    "error": {
+      "share_link_failed": "공유 할 링크를 열지 못했습니다."
+    },
     "fix": "{{technology}}로 문제 해결",
     "get_more_info": "{{technology}}에 대한 자세한 정보 보기",
-    "have_a_positive_test": "테스트 결과 코드가 양성입니까",
+    "have_a_positive_test": "양성 결과를 받으쎴나요?",
     "location_info_body": "Google은 Android 10 이하를 실행하는 장치에 노출 탐지 기능을 사용할 수 있도록 위치 서비스를 설정해야 합니다. 하지만 {{applicationName}}은 사용자의 위치를 추적하거나 보관하지 않습니다.",
     "location_info_subheader": "{{applicationName}}는 위치 데이터에 접근하지 않으며, 귀하의 기기는 추적되지 않습니다.",
     "not_feeling_well": "귀하의 컨디션이 좋지 않습니까?",
+    "notifications_off": "노출을 받으면 알림을 받으려면 알림을 사용 설정하세요.",
     "proximity_tracing_info_body_1": "본 앱이 설치된 스마트폰이 켜진 상태로 블루투스가 활성화되어 있고, 일정 시간 동안 서로 가까이 있으면 앱에 만남이 등록됩니다.",
     "proximity_tracing_info_body_2": "누군가와 만날 경우 데이터와 정보는 익명으로 남지만 본 앱은 개인 데이터를 저장하지 않습니다. 임의 ID만 교환되며, 해당 데이터는 14일 이내에 삭제됩니다.",
-    "proximity_tracing_info_subheader_1": "근접 추적은 어떻게 작동됩니까?",
+    "proximity_tracing_info_subheader_1": "근접 추적은 어떻게 작동되나요?",
     "proximity_tracing_info_subheader_2": "본인의 데이터는 안전합니까?",
-    "take_assessment": "평가 하기"
+    "take_assessment": "평가 하기",
+    "verification_code_card": {
+      "if_you_have_a_code": "커뮤니티의 안전을 지키기 위해 인증 번호를 제출해 주세요.",
+      "if_you_have_a_positive_test": "코로나19 양성 결과를 받을 경우에 익명으로 그 결과를 신고하여 당신의 커뮤니티의 안전을 지킬 수 있습니다.",
+      "more_info": "인증 번호는 무엇입니까?",
+      "report_positive_test": "양성 결과를 신고하기",
+      "submit_code": "인증 번호를 제출하기"
+    }
   },
   "label": {
-    "check": "체크 표시",
     "checked_checkbox": "체크된 확인란",
     "go_to_home_view": "홈으로 이동",
-    "launch_enable_notif": "알림 활성화",
+    "launch_enable_notif": "노출 알림 켜기",
     "launch_get_started": "시작",
     "launch_screen1_header": "에 오신 것을 환영합니다.",
     "privacy_policy": "개인정보 정책",
@@ -218,13 +257,14 @@
     "location_alert_header": "위치 서비스 활성화",
     "location_body": "Google은 Android 10 이하를 실행하는 장치에 노출 탐지 기능을 사용할 수 있도록 위치 서비스를 설정해야 합니다. 하지만 {{applicationName}}은 사용자의 위치를 추적하거나 보관하지 않습니다.",
     "location_header": "위치 활성화",
+    "location_services_already_active": "위치 서비스 켬",
     "location_subheader": "{{applicationName}}는 위치 데이터에 접근하지 않으며, 귀하의 기기는 추적되지 않습니다.",
     "no_take_me": "아니오, 이전 페이지로 돌아가겠습니다.",
     "notification_body1": "코로나19 확진자와 동선이 겹쳤을 때 알림을 받게됩니다.",
     "notification_body2": "본 앱은 블루투스 저 에너지를 사용하여이 운영되며, 사용자가 누구인지 또는 어디에 있었는지에 대한 정보를 알지 못하고 임의 코드를 보호합니다. 언제든지 설정에서 이 기능을 끌 수 있습니다.",
     "notification_header": "귀하가 코로나19에 노출되었을 수 있는 경우 알림을 받으십시오.",
     "notification_subheader1": "언제 알림을 받습니까?",
-    "notification_subheader2": "어떻게 작동합니까?",
+    "notification_subheader2": "어떻게 작동하나요?",
     "notification_subheader3": "본 앱은 코로나19 감염 예방을 위한 것이며 반드시 감염을 방지하는 것은 아닙니다.",
     "please_read_the": "읽어 주십시오.",
     "privacy_policy": "개인정보 정책",
@@ -241,14 +281,15 @@
       "subheader_4": "각 휴대 전화는 플래그가 부착된 ID 목록 찾기위해 서버에 주기적으로 접속하고 일치하는 항목을 찾습니다.",
       "subheader_5": "만약 {{applicationName}}이 플래그가 부착된 ID와 긍정적인 일치를 찾으면 알림을 받습니다."
     },
+    "proximity_tracing_already_active": "노출 알림 켬",
     "proximity_tracing_body1": "본 앱이 설치된 스마트폰이 켜진 상태로 블루투스가 활성화되어 있고, 일정 시간 동안 서로 가까이 있으면 앱에 만남이 등록됩니다.",
     "proximity_tracing_body2": "누군가와 만날 경우 데이터와 정보는 익명으로 남지만 본 앱은 개인 정보는 저장하지 않습니다. 임의 ID만 교환되며, 해당 데이터는 14일 이내에 삭제됩니다.",
     "proximity_tracing_button": "근접 추적 활성화",
     "proximity_tracing_header": "근접 추적 활성화",
-    "proximity_tracing_subheader1": "어떻게 작동합니까?",
+    "proximity_tracing_subheader1": "어떻게 작동하나요?",
     "proximity_tracing_subheader2": "본인의 데이터는 안전합니까?",
     "proximity_tracing_subheader3": "본 앱은 코로나19 감염 예방을 위한 것이며 반드시 감염을 방지하는 것은 아닙니다.",
-    "screen1_button": "어떻게 작동합니까?",
+    "screen1_button": "어떻게 작동하나요?",
     "screen1_header": "우리는 함께 코로나19의 확산을 방지할 수 있습니다.",
     "screen1_image_label": "하이파이브를 하는 두 사람",
     "screen2_button": "본인의 개인 정보는 보호됩니까?",
@@ -280,7 +321,7 @@
     "exposure_notifications": "노출 알림",
     "exposure_scanning": "노출 감지",
     "home": "홈",
-    "how_the_app_works": "어떻게 앱이 작동하나요?",
+    "how_the_app_works": "앱은 어떻게 작동하나요?",
     "legal": "법률",
     "location": "위치",
     "protect_privacy": "개인 정보를 보호하는 방법",
@@ -381,9 +422,12 @@
   },
   "settings": {
     "data_deleted": "데이터가 삭제되었습니다.",
+    "delete_data_are_you_sure": "확실합니까?",
     "delete_data_disclosure1": "아래의 \"내 데이터 삭제\" 버튼을 누르면 앱에서 휴대전화에 저장된 증상 기록 데이터가 삭제됩니다.",
     "delete_data_disclosure2": "노출 알림을 위해 휴대전화에서 생성하거나 수집 한 데이터는 삭제되지 않습니다.\n\n기기설정에서 추가 데이터를 삭제할 수 있습니다.",
     "delete_data_note": "참고",
+    "delete_data_symptom_history": "기기에 저장된 모든 증상 로그",
+    "delete_data_this_action": "이 작업은 {{applicationName}}에 저장된 모든 데이터를 삭제합니다.",
     "delete_my_data": "내 데이터 삭제",
     "errors": {
       "deleting_data": "죄송합니다. 귀하의 데이터를 삭제할 수 없습니다."
@@ -426,7 +470,15 @@
     "other": "그 외 증상",
     "persistent_pain_or_pressure_in_the_chest": "가슴의 지속적인 통증 또는 압박",
     "shortness_of_breath_or_difficulty_breathing": "숨가쁨 또는 호흡 곤란",
-    "sore_throat": "인후통",
-    "trouble_breathing": "호흡 곤란"
+    "sore_throat": "인후통"
+  },
+  "verification_code_alerts": {
+    "code_used_body": "입력하신 인증 번호가 이미 사용되었습니다.",
+    "code_used_title": "이미 사용 된 인증 번호",
+    "invalid_code_title": "무효 인증 번호",
+    "network_connection_body": "인증 본호를 제출하려면 WiFi에 연결되어 있어야 합니다.",
+    "network_connection_title": "인터넷에 연결되지 않음",
+    "unknown_body": "오류가 발생했습니다. 다시 시도하십시오.",
+    "unknown_title": "오류가 발생했습니다."
   }
 }
