--- a/src/locales/pau.json
+++ b/src/locales/pau.json
@@ -2,6 +2,9 @@
   "common": {
     "cancel": "Kotouar"
   },
+  "errors": {
+    "something_went_wrong": "Ng mlar ngii a dilubch el mlo mekngit"
+  },
   "settings": {
     "delete_data_are_you_sure": "Ke kmal mla mo sure?"
   }
