--- a/src/locales/zh_TW.json
+++ b/src/locales/zh_TW.json
@@ -43,17 +43,14 @@
     "daily_new_cases": "每日新增案例",
     "error_getting_data": "很抱歉，我們無法取得{{location}}最新的COVID案例數據。",
     "infection_rate": "感染率",
-    "new_cases": "新增案例",
-    "per_100k": "每10萬",
     "positive_test_rate": "確診率",
     "see_more": "查看更多",
-    "source": "來源： {{source}}",
-    "trending_down": "下降趨勢",
-    "trending_up": "上升趨勢"
+    "source": "來源： {{source}}"
   },
   "errors": {
     "description": "發生了錯誤。請重新加載應用程式。",
     "reload": "重新加載",
+    "something_went_wrong": "有什麼出現了問題",
     "title": "未知錯誤"
   },
   "escrow_verification": {
@@ -97,18 +94,9 @@
   "exposure_history": {
     "check_for_exposures": "檢測暴露情況。",
     "exposure_detail": {
-      "2m_apart": "2公尺距離",
-      "6ft_apart": "6英尺距離",
-      "general_guidance": "一般指南",
-      "ha_guidance_header": "我該怎麼做？",
-      "header": "您接觸的某個人在之後被檢測為COVID-19陽性反應。",
       "next_steps": "下一步",
       "personalize_my_guidance": "指引個人化",
-      "quarantine": "隔離",
-      "schedule_callback": "安排與{{healthAuthorityName}}追蹤接觸者的人員的聯繫。",
-      "speak_with_contact_tracer": "與接追蹤接觸者的人員通話",
-      "wash_your_hands": "洗手",
-      "wear_a_mask": "戴口罩"
+      "schedule_callback": "安排與{{healthAuthorityName}}追蹤接觸者的人員的聯繫。"
     },
     "health_guidelines": {
       "six_feet_apart": "保持6英尺距離",
@@ -125,9 +113,6 @@
     "no_connectivity_message": "您沒有連接到網路！",
     "no_exposure_reports": "無接觸紀錄",
     "no_exposure_reports_over_past": "您在過去14天內並未收到任何接觸報紀錄",
-    "possible_exposure": "可能的COVID-19接觸",
-    "protect_yourself_and_others": "保護您自己與社區中的其他人",
-    "review_guidance_from_ha": "檢視來自{{healthAuthorityName}}的指示",
     "updated": "更新",
     "why_did_i_get_an_en": "我為什麼收到接觸通知？",
     "why_did_i_get_an_en_para": "當您最近曾經接近的某個人收到COVID-19陽性結果並選擇通知其他人時，您將會收到通知。"
@@ -169,7 +154,6 @@
     "take_assessment": "進行檢測"
   },
   "label": {
-    "check": "複選標記",
     "checked_checkbox": "選取的選項",
     "go_to_home_view": "回到首頁",
     "launch_enable_notif": "開啟通知",
@@ -406,7 +390,6 @@
     "other": "其他",
     "persistent_pain_or_pressure_in_the_chest": "持續的胸部疼痛或壓力",
     "shortness_of_breath_or_difficulty_breathing": "呼吸急促或呼吸困難",
-    "sore_throat": "喉嚨痛",
-    "trouble_breathing": "呼吸困難"
+    "sore_throat": "喉嚨痛"
   }
 }
