Add healthcheck cta on escrow complete screen
Why:
When a user completes the escrow verification flow we would like to show
them a cta to complete a covid 19 symptom log.

This commit:
Updates the EscrowVerification Complete screen to include the new cta.

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -75,6 +75,11 @@
       "subheader": "Please provide your phone number and test date and we'll text you your verification code.",
       "test_date": "Test date",
       "test_details": "Test Details"
+    },
+    "complete_healthcheck": "Complete HealthCheck",
+    "complete": {
+      "body": "You’re helping contain the spread of the virus and protect others in your community.",
+      "title": "Thanks for keeping your community safe!"
     }
   },
   "export": {
